--- a/classMeet/app/views/menu/menu.html
+++ b/classMeet/app/views/menu/menu.html
@@ -2,7 +2,7 @@
     <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a href="/#/">Acceuil</a> <a href="/#/profil">Profil</a> <a href="" ng-click="deconnection()">Déconnection</a></div>
+          <a href="/#/">Acceuil</a> <a href="/#/messagerie">Messagerie</a> <a href="/#/profil">Profil</a> <a href="" ng-click="deconnection()">Déconnection</a></div>
         </div>
       </div>
     </div>
