create.sql + app + serviceAuth

--- a/classMeet/app/views/acceuil.html
+++ b/classMeet/app/views/acceuil.html
@@ -12,7 +12,7 @@
       <tr class="disable-text-selection" ng-repeat="cour in listeCours">
         <td>{{cour.sigle}}</td>
         <td>{{cour.titre}}</td>
-        <td>Gr.{{cour.groupe}}</td>
+        <td>Gr.{{cour.noGroupeCours}}</td>
       </tr>
     </tbody>
   </table>
