--- a/classMeet/app/views/login.html
+++ b/classMeet/app/views/login.html
@@ -6,9 +6,9 @@
 	Mot de passe: <input type="password" ng-model="password"/>
 	<br>
 	<br>
-	<a ng-href="/#/recuperMDP">Vous avez oublié votre mot de passe?</a>
+	<!--<a ng-href="/#/recuperMDP">Vous avez oublié votre mot de passe?</a>
 	<br>
-	<br>
+	<br>-->
 	<input class="btn btn-default" type="button" ng-click="login()" value="S'identifier"/>
 	<input class="btn btn-default" type="button" ng-click="enregistrer()"value="S'enregistrer"/>
 </div>
