--- a/classMeet/app/views/messagesEnvoyes.html
+++ b/classMeet/app/views/messagesEnvoyes.html
@@ -1,5 +1,5 @@
 <div ng-include="'views/menu/menu.html'"></div>
-<div ng-controller="MessagerieCtrl">
+<div ng-controller="MessagesEnvoyesCtrl">
 
   <div ng-include="'views/messagerie/sectionMessagerie.html'"></div>
   <div style="width: 75%; float: left;">
@@ -10,21 +10,21 @@
       <tr>
         <th></th>
         <th>Objet</th>
-        <th>De</th>
+        <th>À</th>
         <th>Date</th>
       </tr>
     </thead>
     <tbody>
-      <tr ng-click=ouvrirMessage(message) ng-repeat="message in messagesRecus">
+      <tr ng-click=ouvrirMessage(message) ng-repeat="message in messagesEnvoyes">
         <td><input type="checkbox" ng-change=updateCheckbox() ng-model="message.selected"/></td>
         <td>{{message.objet}}</td>
-        <td>{{message.de}}</td>
+        <td>{{message.a}}</td>
         <td>{{message.dateMessage}}</td>
       </tr>
     </tbody>
   </table>
 </div>
-<div style="height:200px; border-style:ridge;overflow-y:scroll;">
+  <div style="height:200px; border-style:ridge;overflow-y:scroll;">
   <div ng-hide="!messageCourant">
     {{messageCourant.texte}}
   </div>
