--- a/classMeet/app/views/equipes.html
+++ b/classMeet/app/views/equipes.html
@@ -1,5 +1,6 @@
 <div ng-include="'views/menu/menu.html'"></div>
 <div ng-controller="EquipesCtrl">
+  <h3>{{groupecourscourant.sigle}}</h3>
   <h4>Créer une équipe</h4>
   <form id="creerEquipe">
       <table class="table table-hover">
@@ -31,12 +32,4 @@
         </tbody>
       </table>
   </form>
-  <div id="sidebar-wrapper .hidden">
-        <ul class="sidebar-nav">
-            <li class="sidebar-brand" ng-repeat="coequipier in listeCoequipiers">
-                <span>{{coequipier.nom}}, {{coequipier.prenom}}</span>
-                <a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a>
-            </li>
-        </ul>
-  </div>
 </div>
