--- a/classMeet/app/views/equipe.html
+++ b/classMeet/app/views/equipe.html
@@ -1,24 +1,43 @@
 <div ng-include="'views/menu/menu.html'"></div>
-<div ng-controller="EquipeCtrl">
-  <h3>{{groupecourscourant.sigle}}-{{groupecourscourant.noGroupe}}</h3>
-  <h4>{{equipecourante.nom}}</h4>
-  <br />
-  <form id="envoyerMessage">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Nom</th>
-            <th>Prenom</th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="disable-text-selection" ng-repeat="coequipier in listeCoequipiers">
-            <td>{{coequipier.nom}}</td>
-            <td>{{coequipier.prenom}}</td>
-            <td> <a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span></a></td>
-          </tr>
-        </tbody>
-      </table>
-  </form>
+<div ng-include="'views/menu/menuEquipe.html'"></div>
+ <div ng-controller="EquipeCtrl">
+  <h3>{{equipeCourante.nomEquipe}}  {{equipeCourante.sigleCours}}-{{equipeCourante.noGroupeCours}}</h3>
+    <h4></h4>
+    <br>
+    <h3>Membres</h3>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Code Utilisateur</th>
+        <th>Nom</th>
+        <th>Prenom</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-click="afficherProfil(membre)" class="disable-text-selection" ng-repeat="membre in membresEquipe">
+        <td>{{membre.codeUtilisateur}}</td>
+        <td>{{membre.nom}}</td>
+        <td>{{membre.prenom}}</td>
+      </tr>
+    </tbody>
+  </table>
+  <br>
+  <h3>Requêtes de membre</h3>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>Code Utilisateur</th>
+        <th>Nom</th>
+        <th>Prenom</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-click="accepterRequete(membre)" class="disable-text-selection" ng-repeat="membre in requetesMembreEquipe">
+        <td>{{membre.codeUtilisateur}}</td>
+        <td>{{membre.nom}}</td>
+        <td>{{membre.prenom}}</td>
+      </tr>
+    </tbody>
+  </table>
+ </div>
 </div>
